Eagerly delete replaced notifications from the database

Don't rely on the close() event to happen, instead, delete them as soon
as we know one's being replaced.

BUG=635326

Review-Url: https://codereview.chromium.org/2223943002
Cr-Commit-Position: refs/heads/master@{#410697}

Former-commit-id: 3ce3c468088599dc190fc596d0780c319ed82d3d